--- a/TicTacChessMHou/TicTacChessMHou27022023/TicTacChessMHou27022023/TicTacChessMHou27022023.csproj
+++ b/TicTacChessMHou/TicTacChessMHou27022023/TicTacChessMHou27022023/TicTacChessMHou27022023.csproj
@@ -60,11 +60,18 @@
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <SubType>Designer</SubType>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
+    <Compile Include="Properties\Resources.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
@@ -75,18 +82,6 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\Chess_Knight.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\Chess_Queen.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\Chess_Rook.svg" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\flappybird.png" />
-  </ItemGroup>
-  <ItemGroup>
     <None Include="Resources\Chess_Rook_White.png" />
   </ItemGroup>
   <ItemGroup>
@@ -94,9 +89,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Chess_Queen_White.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\Chess_Rook_White1.png" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Chess_Rook_Black.png" />
